force-app/main/default/objects/Past_Proceedure__c/Past_Proceedure__c.object-meta.xml
<CustomObject>
    <label>Past Procedure</label>
    <nameField>
        <label>Past Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Past Procedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>