force-app/main/default/objects/Past_Proceedure__c/fields/Past_Procedure_Description__c.field-meta.xml
<CustomField>
    <fullName>Past_Procedure_Description__c</fullName>
    <label>Past Procedure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>