force-app/main/default/objects/Past_Proceedure__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient &amp; Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Past_Proceedures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>