force-app/main/default/objects/Past_Proceedure__c/fields/Procedure_List__c.field-meta.xml
<CustomField>
    <fullName>Procedure_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure List</label>
    <referenceTo>Procedures_List__c</referenceTo>
    <relationshipLabel>Past Procedures</relationshipLabel>
    <relationshipName>Past_Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>